--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function sendEmail() {
     <div class="contact-info">
         <h3>Contact Information</h3>
         <p><strong>Email:</strong> support@presizer.com</p>
-        <p><strong>Phone:</strong> +123 456 7890</p>
+        <p><strong>Phone:</strong> +91 6395140323</p>
         <p><strong>Business Hours:</strong> Monday - Friday, 9 AM - 6 PM</p>
     </div>
 </div>
