--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function sendEmail() {
     const message = document.getElementById('message').value;
 
     // Create a mailto link with the form data
-    const mailtoLink = `mailto:support@presizer.com?subject=Message from ${name}&body=Name: ${name}%0D%0AEmail: ${email}%0D%0A%0D%0A${message}`;
+    const mailtoLink = `mailto:pagal3992@gmail.com?subject=Message from ${name}&body=Name: ${name}%0D%0AEmail: ${email}%0D%0A%0D%0A${message}`;
 
     // Open the default mail client with the mailto link
     window.location.href = mailtoLink;
@@ -127,9 +127,10 @@ function sendEmail() {
 
     <div class="contact-info">
         <h3>Contact Information</h3>
-        <p><strong>Email:</strong> support@presizer.com</p>
+        <p><strong>Email:</strong> pagal3992@gmail.com</p>
         <p><strong>Phone:</strong> +91 6395140323</p>
         <p><strong>Business Hours:</strong> Monday - Friday, 9 AM - 6 PM</p>
+        <p><strong>Address:Ward No 01 Faizganj Behta Bisauli Budaun Uttar Pradesh 243632</strong></p>
     </div>
 </div>
 
